// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileThresholdField expect to handle ThresholdChange 1`] = `
Object {
  "threshold": 100,
  "validThreshold": true,
}
`;

exports[`ProfileThresholdField expect to handle ThresholdChange 2`] = `
Object {
  "threshold": 50,
  "validThreshold": true,
}
`;

exports[`ProfileThresholdField expect to handle ThresholdChange 3`] = `
Object {
  "threshold": 0,
  "validThreshold": false,
}
`;

exports[`ProfileThresholdField expect to render with title 1`] = `
<Fragment>
  <Title
    headingLevel="h3"
    size="xl"
  >
    Compliance threshold
  </Title>
  The compliance threshold defines what percentage of rules must be met in order for a system to be determined "compliant".
  <FormGroup
    fieldId="policy-threshold"
    helperText="A value of 95% or higher is recommended"
    helperTextInvalid="Threshold has to be a number between 0 and 100"
    isValid={true}
    label={
      <React.Fragment>
        Compliance threshold (%) 
      </React.Fragment>
    }
  >
    <Field
      aria-label="compliance threshold"
      component={[Function]}
      defaultValue={10}
      id="complianceThreshold"
      isRequired={true}
      isValid={true}
      name="complianceThreshold"
      onChange={[Function]}
      style={
        Object {
          "display": "block",
          "width": "60%",
        }
      }
      type="number"
    />
  </FormGroup>
</Fragment>
`;

exports[`ProfileThresholdField expect to render without error 1`] = `
<Fragment>
  <FormGroup
    fieldId="policy-threshold"
    helperText="A value of 95% or higher is recommended"
    helperTextInvalid="Threshold has to be a number between 0 and 100"
    isValid={true}
    label={
      <React.Fragment>
        Compliance threshold (%) 
        <Popover
          appendTo={[Function]}
          aria-label=""
          bodyContent={
            <React.Fragment>
              The compliance threshold defines what percentage of rules must be met in order for a system to be determined "compliant".
            </React.Fragment>
          }
          boundary="window"
          className=""
          closeBtnAriaLabel="Close"
          distance={25}
          enableFlip={true}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          footerContent={null}
          headerContent={
            <Title
              headingLevel="h3"
              size="xl"
            >
              Compliance threshold
            </Title>
          }
          hideOnOutsideClick={true}
          isVisible={null}
          maxWidth="calc(2rem + 18.75rem)"
          onHidden={[Function]}
          onHide={[Function]}
          onMount={[Function]}
          onShow={[Function]}
          onShown={[Function]}
          position="top"
          shouldClose={[Function]}
          tippyProps={Object {}}
          zIndex={9999}
        >
          <OutlinedQuestionCircleIcon
            color="currentColor"
            noVerticalAlign={false}
            size="sm"
            title={null}
          />
        </Popover>
      </React.Fragment>
    }
  >
    <Field
      aria-label="compliance threshold"
      component={[Function]}
      defaultValue={10}
      id="complianceThreshold"
      isRequired={true}
      isValid={true}
      name="complianceThreshold"
      onChange={[Function]}
      style={
        Object {
          "display": "block",
          "width": "60%",
        }
      }
      type="number"
    />
  </FormGroup>
</Fragment>
`;
